# arap_deformation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/deformation/: arap_solver.h
include/mesh/: mesh.h
include/viewer/: shader.h  viewer.h
shaders/: mesh.frag
src/: main.cpp
src/deformation/: arap_solver.cpp
src/mesh/: mesh.cpp
src/viewer/: shader.cpp  viewer.cpp
